--- a/Swipe/app/src/main/res/layout/content_main.xml
+++ b/Swipe/app/src/main/res/layout/content_main.xml
@@ -16,14 +16,26 @@
     >
 
 
-
-    <Button
-        android:id="@+id/startBtn"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
+    >
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:onClick="onClickStartBtn"
-        android:text="Start"
+        android:layout_margin="5dp"
+        android:paddingBottom="5dp"
+        android:text="센서를 작동시킵니다." />
 
-        />
+
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/switchButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:text="" />
+</LinearLayout>
 </RelativeLayout>
