--- a/Swipe/app/src/main/res/layout/app_bar_main.xml
+++ b/Swipe/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.taek_aaa.swipe.MainActivity"
+    tools:context="com.taek_aaa.swipe.view.MainActivity"
     android:background="@drawable/side_nav_bar"
     >
 
