--- a/Swipe/app/src/main/res/layout/activity_setting.xml
+++ b/Swipe/app/src/main/res/layout/activity_setting.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#E1E0E0"
 
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="center"
         android:background="@drawable/side_nav_bar"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <ImageView
             android:id="@+id/backspace"
@@ -39,19 +42,15 @@
     </LinearLayout>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#E5E4E2" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_margin="2dp"
+        android:orientation="vertical"
         android:background="#F5F5F5"
-        android:orientation="vertical">
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -72,7 +71,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#F5F5F5">
 
 
             <TextView
@@ -94,19 +94,14 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#E5E4E2" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
-        android:background="#F5F5F5"
-        android:orientation="vertical">
+        android:layout_margin="2dp"
+        android:orientation="vertical"
+        android:background="#F5F5F5">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -152,19 +147,15 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#E5E4E2" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_margin="2dp"
+        android:orientation="vertical"
         android:background="#F5F5F5"
-        android:orientation="vertical">
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -205,16 +196,11 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#E5E4E2" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_margin="2dp"
         android:background="#F5F5F5"
         android:orientation="vertical">
 
@@ -258,12 +244,8 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#E5E4E2" />
-</LinearLayout>
 
+</LinearLayout>
 
 
 
